<resources>
    <string name="app_name">PressureHealth</string>

    <string name="text_start">Start</string>
    <string name="text_next">Next</string>
    <string name="text_skip">Skip</string>
    <string name="text_time">August 19,2023</string>
    <string name="text_start_record">Start Record</string>

    <string name="text_policy"><u>Agree User Policy</u></string>
    <string name="text_and">and</string>
    <string name="text_privacy"><u>Privacy Agreement</u></string>

    <string name="text_step_title_1">Protecting the heart starts with healthy blood pressure</string>
    <string name="text_step_title_2">Grasp blood pressure trends and predict a healthy future</string>
    <string name="text_step_title_3">Record blood pressure and grasp the pulse of health</string>

    <string name="text_step_content_1">Understand the importance of blood pressure and take the first step to maintain cardiovascular health</string>

    <string name="title_record">Record</string>
    <string name="title_record_more">More Record</string>
    <string name="title_record_new">New Record</string>
    <string name="title_info">Information</string>
    <string name="title_setting">Setting</string>


    <string name="title_alarm">Alarm</string>
    <string name="title_language">Language</string>
    <string name="title_share">Share</string>
    <string name="title_privacy">Privacy setting</string>
    <string name="title_policy">User Agreement</string>
    <string name="title_contact">Contact information</string>
    <string name="title_mail">abc@gmail.com</string>

    <string name="title_set_time">Set time</string>
    <string name="title_year">Year</string>
    <string name="title_month">Month</string>
    <string name="title_day">Day</string>
    <string name="title_hour">Hour</string>
    <string name="title_minute">Minute</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_confirm">Confirm</string>

    <string name="title_systolic">Systolic</string>
    <string name="title_sys">SYS</string>
    <string name="title_diastolic">Diastolic</string>
    <string name="title_dia">DIA</string>
    <string name="record_unit">mmHg</string>
    <string name="record_unit2">/mmHg</string>

    <string name="title_h0">Hypotension</string>
    <string name="title_h1">Normal</string>
    <string name="title_h2">High</string>
    <string name="title_h3">Stage 1</string>
    <string name="title_h4">Stage 2</string>
    <string name="title_h5">Hypertension</string>

    <string name="content_h0">(sys &lt;90 or dia &lt;60)</string>
    <string name="content_h1">(sys 90–119 and dia 60–79)</string>
    <string name="content_h2">(sys 120–129 and dia 60–79)</string>
    <string name="content_h3">(sys 130–139 or dia 80–89)</string>
    <string name="content_h4">(sys 140–180 or dia 90–120)</string>
    <string name="content_h5">(sys 180+ or dia 120+)</string>

    <string name="des_h0">Stay adequately hydrated and exercise regularly.</string>
    <string name="des_h1">Continue to maintain a healthy lifestyle. </string>
    <string name="des_h2">Pay attention to your diet and reduce salt intake.</string>
    <string name="des_h3">Improve your lifestyle, exercise regularly, and manage your diet.</string>
    <string name="des_h4">Consult a doctor early on, as medication may be necessary.</string>
    <string name="des_h5">Seek medical advice promptly and develop an appropriate treatment plan.</string>


    <string name="add_record_now">+ Record now</string>
    <string name="add_record_new">+ New record</string>
    <string name="record_more">More</string>
    <string name="record_new_time">2023-08-04  14:35</string>
    <string name="record_no">No record!</string>
    <string name="record_now">Record now</string>
    <string name="home_top_title">Blood pressure record</string>
    <string name="home_top_content">Keep recording your blood pressure to understand your health status</string>


    <string name="record_recent">Recent Records</string>
    <string name="record_week">This Week</string>
    <string name="record_last_7days">Last 7 days</string>
    <string name="record_month">This Month</string>
    <string name="record_last_month">Last Month</string>
    <string name="record_all">All</string>

</resources>