<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GuideActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guide_splash_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_app_0">

        <ImageView
            android:id="@+id/guide_app_icon"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="191dp"
            android:src="@mipmap/ic_launcher_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/guide_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:src="@mipmap/ic_launcher_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_app_icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/guide_splash"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:id="@+id/guide_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="6dp"
                android:max="100"
                android:progressDrawable="@drawable/bg_progress_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/guide_start"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:layout_width="320dp"
                android:layout_height="51dp"
                android:background="@drawable/bg_empty_white_radius_16"
                android:text="@string/text_start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/rd_start"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_check_box_start"
                android:button="@null"
                android:checked="true"
                app:layout_constraintStart_toStartOf="@id/btn_start"
                app:layout_constraintTop_toBottomOf="@id/btn_start" />

            <TextView
                android:id="@+id/guide_policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_policy"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:autoLink="web"
                app:layout_constraintBottom_toBottomOf="@id/rd_start"
                app:layout_constraintStart_toEndOf="@id/rd_start"
                app:layout_constraintTop_toTopOf="@id/rd_start" />

            <TextView
                android:id="@+id/guide_and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_and"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/rd_start"
                app:layout_constraintStart_toEndOf="@id/guide_policy"
                app:layout_constraintTop_toTopOf="@id/rd_start" />

            <TextView
                android:id="@+id/guide_privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_privacy"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:autoLink="web"
                app:layout_constraintBottom_toBottomOf="@id/rd_start"
                app:layout_constraintStart_toEndOf="@id/guide_and"
                app:layout_constraintTop_toTopOf="@id/rd_start" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guide_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_app_1"
        android:visibility="gone">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/guide_vp"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="@drawable/bg_bottom_radius_32"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/guide_skip"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:gravity="end|center"
            android:paddingStart="24dp"
            android:paddingEnd="20dp"
            android:text="@string/text_skip"
            android:textColor="@color/color_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/guide_skip_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lineHeight="32sp"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_vp" />

        <ImageView
            android:id="@+id/guide_skip_next_image"
            android:layout_width="43dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_next_step"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/guide_skip_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_skip_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>