<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_margin="15dp"
        android:background="@mipmap/bg_home_top_record"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:lineHeight="28sp"
            android:maxLength="24"
            android:text="@string/home_top_title"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_top_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:lineHeight="16sp"
            android:maxLines="2"
            android:text="@string/home_top_content"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@id/top_v"
            app:layout_constraintStart_toStartOf="@id/main_top_title"
            app:layout_constraintTop_toBottomOf="@id/main_top_title" />

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="90dp"
            android:layout_height="29dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_white_radius_19"
            android:gravity="center"
            android:lineHeight="18sp"
            android:text="@string/add_record_now"
            android:textColor="@color/color_blue_text"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/main_top_content"
            app:layout_constraintTop_toBottomOf="@id/main_top_content" />

        <View
            android:id="@+id/top_v"
            android:layout_width="137dp"
            android:layout_height="147dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="137dp"
        android:layout_height="161dp"
        android:src="@mipmap/ic_home_top_image"
        app:layout_constraintBottom_toBottomOf="@id/main_top"
        app:layout_constraintEnd_toEndOf="@id/main_top" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_top_radius_32"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_rv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>